# kelvin

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.external_open.md  README.md  README.pipeline.md  backup.sh  deploy.py  deploy.sh  dev.yaml  docker-compose-local.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  ruff.toml  sync_from_prod.sh  worker.sh
.github/: dependabot.yml
.github/workflows/: build-evaluator-images.yml  ci.yml  codeql-analysis.yml  deploy.yml  deployment_service-ci.yml  docs.yml  pyright-venv.yml  pyright.yml  ruff.yml  test.yml
api/: admin.py  apps.py  auth.py  backends.py  dto.py  middleware.py  models.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20201109_1517.py
api/v2/: default.py  dto.py
api/views/: default.py  quiz.py  utils.py
common/: admin.py  apps.py  bulk_import.py  comment.py  cron_creator.py  dto.py  evaluate.py  event_log.py  inbus.py  models.py  moss.py  serialization.py  submit.py  task.py  tests.py  upload.py  utils.py
common/ai_review/: dto.py  job.py  llm_reviewer.py  openai_config.py  processor.py  prompt.py  scheme.py
common/ai_summary/: dto.py  summarizer.py  summary.py
common/emails/: __init__.py  models.py
common/exceptions/: __init__.py  custom_exception_middleware.py  exception_parser.py  http_exceptions.py  middleware.py
common/inbus/: auth.py  config.py  dto.py  inbus.py  utils.py  views.py
common/migrations/: 0001_initial.py  0002_auto_20191113_1356.py  0003_add_group_teachers.py  0004_assignedtask_moss_url.py  0005_auto_20191117_2054.py  0006_api_token_as_text.py  0007_split_subjects.py  0008_remove_submit_source.py  0009_comment.py  0010_auto_20200315_0908.py  0011_submit_assigned_points.py  0012_assigned_points_as_float.py  0013_task_announce.py  0014_submit_jobid.py  0015_task_unique_dir.py  0016_GlobalComments.py  0017_pgsql_fixes.py  0018_task_plagiarism_key.py  0019_submit_ip_address.py  0020_semester_active.py  0021_task_created_at.py  0022_semester_inbus_semester_id.py  0023_remove_submit_ip_address_hash_submit_ip_address.py  0024_task_type.py  0025_alter_task_plagiarism_key.py  0026_usereventmodel.py  0027_alter_usereventmodel_action.py  0028_assignedtask_hard_deadline.py  0029_submit_is_final_alter_usereventmodel_action.py  0029_suggestedcomment.py  0030_classroomiprange_assignedtask_allowed_classrooms.py  0030_llmreviewprompt_suggestedcomment.py  0030_suggestedcomment.py  0031_room_class_room.py  0032_email.py  0033_remove_email_sent_at_email_sent_at.py  0034_add_prompt_editor_fields.py  0034_assignedtask_allowed_rooms_roomiprange.py  0034_merge_20260317_2156.py  0034_rename_rating_suggestedcomment_quality_rating_and_more.py  (+3 more)
common/ml/: README.md  __init__.py  student_pass_prediction.py
common/moss/: __init__.py  local_result.py
common/plagcheck/: __init__.py
common/services/: comments_service.py  submits_service.py
common/summary/: dto.py  models.py  summarizer.py  summary.py
deploy/: entrypoint.sh  github_ips.conf  healthcheck.py  local_settings.py  nginx.conf  uwsgi.ini
deployment_service/: .env.example  Dockerfile  README.md  deploy.py  example.py  healthcheck.py  pyproject.toml
deployment_service/app/: config.py  deployment.py  main.py  models.py  security.py
deployment_service/tests/: test_deployment.py  test_main.py  test_models.py  test_security.py
docs/: .gitignore  .markdownlint.json  .markdownlintignore  architecture.md  deployment.md  development.md  docusaurus.config.ts  package-lock.json  package.json  setup.md  sidebars.ts  teacher-guide.md
docs/docs/: architecture.mdx  intro.mdx
evaluator/: Dockerfile  comparators.py  docker_container_cleanup.py  evaluation.py  evaluator-entrypoint.sh  evaluator.py  filters.py  image_evaluator.py  old_deleter.py  pipelines.py  results.py  schema.yml  script.py  tests.py  testsets.py  type_handlers.py  utils.py
evaluator/images/: build.py  build.sh
evaluator/tests/: error.c  test_parse.py  test_utils.py  warning.c
examinator/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
frontend/: .gitignore  .prettierrc  copy-dolos.js  eslint.config.mjs  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.mjs
frontend-vue-ts/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-vue-ts/src/: App.vue  ClassDetail.vue  ClassList.vue  api.ts  global.ts  index.html  main.ts
frontend/caliber/: manage.py
frontend/src/: AddStudentsToClass.svelte  App.svelte  AssignmentPoints.svelte  Autocomplete.svelte  AutocompleteTaskPath.svelte  ClassDetail.svelte  ClassFilter.svelte  ClassList.svelte  ClassroomsSelect.svelte  CodeRow.svelte  ColorTheme.svelte  Comment.svelte  CommentForm.svelte  Confirm.svelte  CopyToClipboard.svelte  CtrlP.svelte  Dropdown.svelte  EditTask.svelte  Editor.svelte  ExampleComponent.vue  ImportFromInbus.svelte  Manager.svelte  Markdown.svelte  Markdown.test.ts  Modal.svelte  Notifications.svelte  PipelineStatus.svelte  PipelineValidation.js  RemoveStudentFromClass.svelte  RemoveStudentsFromClass.svelte  StudentTransfer.svelte  SubmitSource.svelte  SubmitsDiff.svelte  SuggestedComment.svelte  SummaryComments.svelte  SyncLoader.svelte  TaskDetail.svelte  TaskFilter.svelte  TestFile.svelte  Tests.svelte  (+15 more)
kelvin/: admin.py  asgi.py  models.py  routing.py  settings.py  storage.py  urls.py  wsgi.py
quiz/: admin.py  dto.py  middleware.py  models.py  quiz_utils.py  settings.py
quiz/migrations/: 0001_initial.py
scripts/: submit.py
survey/: apps.py  models.py  urls.py  views.py
survey/migrations/: 0001_initial.py
survey/surveys/: survey.yaml
survey/templates/: answers.html  survey.html
task_creator/: apps.py  cron_creator.py
templates/: error_page.html  list.html
templates/admin/: base.html
templates/emails/: points-assigned.html
web/: apps.py  dto.py  emails.py  forms.py  markdown_utils.py  models.py  signals.py  task_utils.py  urls.py  views.py  vsbldapbackend.py
(+291 files in other folders)
