[project]
name = "kelvin"
version = "0.1.0"
description = "Code examination tool"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "beautifulsoup4~=4.11",
    "bokeh~=2.4",
    "cssselect~=1.1",
    "django~=4.2",
    "django-cas-ng~=4.3",
    "django-notifications-hq~=1.8",
    "django-redis>=5.4.0",
    "django-rq~=2.10",
    "django-tasks-scheduler~=1.3",
    "django-webpush~=0.3",
    "imageio~=2.6",
    "Jinja2~=3.1",
    "lxml~=5.1",
    "markdown~=3.7",
    "MarkupSafe~=2.1",
    "mdx-truly-sane-lists~=1.3",
    "mosspy~=1.0",
    "networkx~=2.5",
    "numpy~=1.26",
    "oauthlib~=3.2",
    "pandas~=2.2",
    "psycopg[binary]~=3.2",
    "pygraphviz~=1.7",
    "pymdown-extensions~=10.10",
    "pyserde~=0.25.0",
    "python-dotenv~=1.0",
    "python-magic~=0.4",
    "pyyaml~=6.0",
    "requests~=2.32",
    "requests_oauthlib~=1.3",
    "six~=1.16",
    "setuptools~=69.1",
    "typing-extensions~=4.11",
    "Unidecode~=1.3",
    "uWSGI~=2.0",
    "django-ipware~=7.0",
    "openai>=2.6.1",
    "pycountry~=24.6",
    "django-ninja~=1.4",
    "docker~=7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.3",
    "pyrefly>=0.18.0",
    "django-debug-toolbar>=6.0.0",
    "prek>=0.3.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

include = [
    "api/**/*.py",
    "common/**/*.py",
    "evaluator/**/*.py",
    "kelvin/**/*.py",
    "quiz/**/*.py",
    "survey/**/*.py",
    "web/**/*.py"
]
extend-exclude = [
    "**/migrations/**"
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
