[project]
name = "kelvin"
version = "0.1.0"
description = "Code examination tool"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "beautifulsoup4~=4.14",
    "bokeh~=2.4",
    "cssselect~=1.4",
    "django~=6.0",
    "django-cas-ng~=5.1",
    "django-notifications-community~=1.11",
    "django-redis~=6.0",
    "django-rq~=2.10",
    "django-webpush~=0.3",
    "imageio~=2.37",
    "Jinja2~=3.1",
    "markdown~=3.10",
    "MarkupSafe~=3.0",
    "mdx-truly-sane-lists~=1.3",
    "mosspy~=1.0",
    "numpy~=1.26",
    "oauthlib~=3.2",
    "psycopg[binary]~=3.2",
    "pygraphviz~=1.7",
    "pymdown-extensions~=10.21",
    "pyserde~=0.26.0",
    "python-dotenv~=1.0",
    "python-magic~=0.4",
    "pyyaml~=6.0",
    "requests~=2.32",
    "requests_oauthlib~=2.0",
    "typing-extensions~=4.15",
    "Unidecode~=1.4",
    "uWSGI~=2.0",
    "django-ipware~=7.0",
    "openai>=2.6.1",
    "pycountry~=24.6",
    "django-ninja~=1.4",
    "docker~=7.1",
    "django-tasks-scheduler~=3.0",
    "networkx~=3.4",
    "pandas~=3.0",
    "lxml~=6.1",
]

[dependency-groups]
dev = [
    "ruff==0.6.3",
    "pyrefly==0.18.0",
    "django-debug-toolbar>=6.0.0",
    "prek>=0.3.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

include = [
    "api/**/*.py",
    "common/**/*.py",
    "evaluator/**/*.py",
    "kelvin/**/*.py",
    "quiz/**/*.py",
    "survey/**/*.py",
    "web/**/*.py"
]
extend-exclude = [
    "**/migrations/**"
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
