[project]
name = "deployment-service"
version = "0.1.0"
description = "Deployment Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "types-docker>=7.1.0.20250822",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
