[project]
name = "deployment-service"
version = "0.1.0"
description = "Deployment Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "types-docker>=7.1.0.20250822",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
